<resources>
    <!-- group search -->
    <string name="group_search_hint">모임 이름 검색</string>
    <string name="group_search_register">우리 모임 새로 등록하기 +</string>
    <string name="group_search_title">활동하고 계신\n보드게임 모임을 찾아주세요.</string>
    <string name="group_search_list_description">지금 인기 있는 모임</string>
    <string name="group_search_error_guide1">인터넷이 연결되어 있지 않습니다</string>
    <string name="group_search_error_guide2">연결 상태를 다시 확인해주세요</string>
    <string name="group_search_error_button">다시 불러오기</string>
    <string name="group_search_not_found">‘%s’에 대한 검색 결과가 없습니다.</string>
    <string name="group_search_not_found_guide">보드게임 모임을 등록해주세요!</string>
    <string name="group_search_not_found_button">우리 보드게임 모임 만들러가기</string>

    <string name="complete_message">모임 등록이 완료되었습니다!</string>
    <string name="complete_group_organization_text">소속</string>
    <string name="group_owner_text">관리자</string>
    <string name="group_access_code_text">참여코드</string>
    <string name="group_invite_guide">모임에 가입하기 위해서는 참여코드를 입력해야 합니다.\n 코드를 공유하고 멤버들을 초대해 보세요!</string>
    <string name="confirmation_text">확인</string>
    <string name="image_setting_delegate">모임 대표 이미지</string>
    <string name="image_setting_delegate_guide">모임을 소개할 대표 이미지를 넣어보세요!</string>
    <string name="image_setting_gallery">앨범에서 사진 선택</string>
    <string name="image_setting_random">랜덤 이미지</string>
    <string name="profile_setting">관리자 프로필 설정</string>
    <string name="profile_setting_guide">관리자님이 모임에서 사용할 닉네임을 정해주세요</string>
    <string name="profile_name_count">0/10</string>
    <string name="complete_text">기록 확정</string>
    <string name="create_group_text">모임 등록하기</string>

    <string name="group_create_text">모임 등록</string>
    <string name="group_name_text">보드게임 모임 이름</string>
    <string name="group_name_hint">모임 이름을 입력해주세요.</string>
    <string name="group_name_count">0/14</string>
    <string name="group_description_text">모임 소개</string>
    <string name="group_description_hint">모임을 소개해주세요.</string>
    <string name="group_description_count">0/72</string>
    <string name="group_organization_text">소속 (선택)</string>
    <string name="group_organization_hint">소속을 알려주세요. (ex. 홍익대학교)</string>
    <string name="group_organization_count">0/15</string>
    <string name="group_create_guide">모임 등록하기</string>
    <string name="group_creating_text">모임을 등록하는 중..</string>

    <string name="game_result_record">게임 결과 기록</string>
    <string name="game_select_guide">플레이 할 보드게임을 선택해주세요</string>
    <string name="play_select_guide">게임을 함께 플레이 한 멤버를 선택해주세요</string>
    <string name="player_complete_guide">플레이어 선택 완료</string>
    <string name="member_search_hint">멤버 검색</string>

    <string name="guest_add_text">임시 멤버 추가</string>
    <string name="guest_description_text">아직 온보드에 가입하지 않은 상대를 모임에\n임시 멤버로 추가하고 게임 기록을 남겨보세요.</string>
    <string name="guest_name_hint">임시 멤버가 사용할 닉네임을 입력해주세요.</string>
    <string name="guest_name_set_tip">Tip :임시 멤버의 닉네임은 기억하기 쉽게 만들어주세요.\n이후 온보드에 가입할 때 기록을 연동할 수 있습니다.</string>
    <string name="guest_empty">현재 등록된 임시 멤버가 없습니다.</string>

    <string name="search_result_nothing">\'%s\'에 대한 검색 결과가 없습니다.</string>
    <string name="search_result_nothing_guide">함께 보드게임을 플레이한 상대가 온보드에 아직\n 없다면,임시 멤버로 추가해 기록해보세요!</string>
    <string name="guest_add_nothing">임시 멤버 추가</string>

    <string name="game_result_rank">%d위</string>
    <string name="game_player_count">%d인 플레이</string>
    <string name="game_record_final_guide">최종 기록 이후 점수 수정이 불가능합니다\n정말로 확정하시겠습니까?</string>
    <string name="game_record_guide">%s 결과를 입력해주세요!</string>
    <string name="game_result_recording_text">점수 기록 중..</string>
    <string name="game_result_recording_complete">%s\n점수 기록이 완료되었습니다.</string>
    <string name="game_record_complete">기록 완료</string>
    <string name="game_record_hint">0</string>

    <string name="rank_win_rate">%d%%</string>
    <string name="rank_play_count">플레이 %d회</string>
    <string name="rank_default">-</string>
    <string name="rank_default_play_count">플레이 0회</string>

    <string name="copy_access_code">참여 코드가 복사되었습니다.</string>

    <!-- Setting -->
    <string name="setting_terms_privacy">개인정보 처리방침</string>
    <string name="setting_terms_service">서비스 이용 약관</string>

    <!-- 회원 탈퇴 -->
    <string name="quit_text_1">현재(2023.08) 베타 버전에서는 즉각적인 회원 탈퇴가 불가능합니다. 아래 탈퇴 요청하기 버튼을 누르시면 탈퇴 요청 메일 전송이 가능합니다.</string>
    <string name="quit_text_2">탈퇴 시 회원님의 계정 및 개인정보(닉네임, 그룹 참여 내역)는 즉시 삭제됩니다. 처리 결과는 메일로 받아보실 수 있습니다.</string>
    <string name="quit_text_3">본인이 생성한 그룹이 있는 경우 메일로 추가적인 확인을 요청 드릴 수 있습니다.</string>
    <string name="quit_text_4">게임 기록 데이터는 다른 회원의 서비스 이용에 영향을 미칠 수 있는 정보입니다. 해당 데이터는 타인이 식별 불가능 하도록 처리되어 보관될 수 있습니다.</string>

    <string name="sign_up_name_hint">이름을 입력해주세요.</string>

    <string name="member_number_explanation">멤버수</string>
    <string name="member_number">%d명</string>
    <string name="group_guest_join_title">\'%s\'로 모임 들어가기</string>
    <string name="owner">관리자</string>
    <string name="group_join_title">모임 들어가기</string>
    <string name="group_join_entering">모임에 들어가는 중</string>
    <string name="group_join_code_input_plz">모임 참여 코드를 입력해주세요</string>
    <string name="group_join_code_input">참여 코드 입력</string>
    <string name="guest_list_dialog_title">임시 멤버 기록 연동</string>
    <string name="guest_list_dialog_description">활동헀던 임시 멤버 닉네임을 선택해주세요</string>
    <string name="group_join_already_exists_nickname">이미 있는 이름입니다. 다른 이름을 설정해주세요.</string>
    <string name="group_join_not_correct_code">참여 코드가 맞지 않습니다.</string>
    <string name="home_help_url">https://docs.google.com/forms/d/e/1FAIpQLSfY23k3wSmAMbrkrSrJbgQuE3abWfY1WO0cqiIyN-F1egysJA/viewform?usp=sf_link</string>
    <string name="quit_email_content">탈퇴 신청 전 확인해주세요!
\n\n
- 회원 탈퇴를 위해서는 탈퇴를 요청할 계정 정보 확인이 필요합니다. 유저 ID, 닉네임을 입력해주세요.
\n\n
유저 ID : (자동 입력) %d
 \n\n
닉네임 : (자동 입력) %s
\n\n
- 계정 정보 확인이 완료되면 즉시 회원 탈퇴 처리가 완료되어 회원님의 계정 정보와 개인정보가 파기됩니다. 파기된 정보는 복구되지 않습니다. (서비스 제공에 필요한 일부 게임 결과 기록은 식별 불가능하게 처리되어 보존될 수 있습니다.)\n
- 계정 정보 확인이 어려울 경우 회원 탈퇴가 정상적으로 이루어지지 않습니다.\n
- 처리 결과를 신청하신 메일로 안내해드립니다. 수신 가능한 메일 주소를 사용해주세요.\n</string>
</resources>
