<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="354dp"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/tv_error1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_search_not_found"
        android:textSize="16dp"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/tv_error2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/group_search_not_found_guide"
        android:textSize="14dp" />

    <Button
        android:id="@+id/btn_retry"
        android:layout_width="256dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="156dp"
        android:text="@string/group_search_not_found_button"
        android:textSize="16dp" />

</LinearLayout>
